<resources>

    <string name="areeb">Areeb Malik</string>
    <string name="areeb_email">areeb.malik1989@gmail.com</string>
    <string name="app_name">Device Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="model_number">Model Number</string>
    <string name="product_name">Product Name</string>
    <string name="os_version">OS Version</string>
    <string name="processor_name">Processor Name</string>
    <string name="processor_core">Processor Cores</string>
    <string name="back_camera">Back Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="ram">RAM</string>
    <string name="rom">ROM</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="serial_number">Serial Number</string>
    <string name="imei1">IMEI 1</string>
    <string name="imei2">IMEI 2</string>
    <string name="request_permission">App needs this permission to display device info.</string>
    <string name="permission_denied">Permission Denied! Features suppressed!</string>
    <string name="phone_state_permission_not_granted">Read Phone State Permission Not Granted!</string>
    <string name="evaluating">Evaluating...</string>
    <string name="version">Version</string>
    <string name="version_code">Version Code</string>
    <string name="developer">Developer</string>
    <string name="email">Email</string>
    <string name="lollipop_required">Work with Lollipop and above versions</string>
    <string name="colon">\t:\t</string>
    <string name="carrier">Carrier</string>
    <string name="icc_id">ICC ID</string>
    <string name="mcc">MCC</string>
    <string name="mnc">MNC</string>
    <string name="country_iso">Country ISO</string>
    <string name="subscription_id">Subscription ID</string>
    <string name="sim_slot">SIM Slot</string>
    <string name="roaming">Roaming</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="vendor">Vendor</string>
    <string name="max_delay">Max Delay</string>
    <string name="min_delay">Min Delay</string>
    <string name="max_range">Max Range</string>
    <string name="power">Power</string>
    <string name="resolution">Resolution</string>

    <!-- Menu -->
    <string name="about">About</string>
    <string name="credits">Open Source Credits</string>
    
    <!-- Open source credits -->
    <string name="credits_licence">Open Source Credits</string>
    <string name="easydeviceinfo">easydeviceinfo</string>
    <string name="easydeviceinfo_licence">Copyright (C) 2016 Nishant Srivastava\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="easypermissions">easypermissions</string>
    <string name="easypermissions_licence">Copyright 2017 Google\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

</resources>
