<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/MyActivityTheme"
    tools:context="malik1989.areeb.mydeviceinfo.ui.activity.InfoActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/info_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:contentPadding="10dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="10dp"/>

                    <TextView
                        android:id="@+id/info_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_code"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="10dp"/>

                    <TextView
                        android:id="@+id/info_version_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/areeb"
                        android:textColor="@android:color/black" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="@string/areeb_email"
                        android:textColor="@android:color/black" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
