<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sensor_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:contentPadding="10dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/type"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensorType"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/version"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_version"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/vendor"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_vendor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/max_delay"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_max_delay"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/min_delay"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_min_delay"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/max_range"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_max_range"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/power"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_power"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/resolution"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sensor_resolution"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>