<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sim_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:contentPadding="10dp"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sim_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sim_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sim_slot"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_slot"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/carrier"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_carrier_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/roaming"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_roaming"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/subscription_id"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/subscription_id"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/icc_id"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_icc_id"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/country_iso"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_country_iso"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/mcc"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_mcc"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/mnc"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@android:color/black"/>
                <TextView

                    android:id="@+id/sim_mnc"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

